@@ -175,5 +175,14 @@ else
 	IGNORE_NOT=0
 fi
 }
+
+symlink ()
+{
+mkdir -p $HOME/.mythtv
+if [ ! -e $HOME/.mythtv/mysql.txt ]; then
+	ln -s /etc/mythtv/mysql.txt $HOME/.mythtv/mysql.txt
+fi
+
+}
 ###################################################################
 
