@@ -36,6 +36,7 @@ mythtv (1:0.24.0+fixes26957-0ubuntu1) UNRELEASED; urgency=low
   * Conflicts/Replaces for no longer used mythplugins-dbg package.
   * Drop references to mythplugins-dbg in the apport rules.
   * Fix the installation of mythmusic. (LP: #672045)
+  * Create a mysql.txt symlink from mythtv-setup as well.
 
   [ Gerald Barker ]
   * Copy 'internetcontent' scripts to /usr/share/mythtv/ as part of
